2008-06-21  Douglas Bates <bates@stat.wisc.edu>

	* [r161] NAMESPACE, R/lmer.R, man/fixef.Rd, man/hatTrace.Rd,
	  man/lmList-class.Rd, man/lmList.Rd, man/lmer.Rd, man/mcmcsamp.Rd,
	  man/mer-class.Rd, man/merMCMC-class.Rd, man/ranef.Rd: Removed
	  visibility of hatTrace and the confint method for mer objects. Major
	  documentation cleanup.
	* [r160] NEWS: Added a NEWS file
	* [r157] tests/lmer.R, tests/lmer.Rout.save: Get rid of calls to
	  system.time in tests - results are not reproducible
	* [r156] NAMESPACE, R/AllGeneric.R, R/gsummary.R, R/lmList.R, R/lmer.R,
	  man/cbpp.Rd, man/gsummary.Rd, man/pooledSD.Rd, man/ranef.Rd: Remove
	  gsummary; fold pooledSD into lmList; add drop argument to ranef;
	  shorten long title in cbpp docs

2008-06-20  Douglas Bates <bates@stat.wisc.edu>

	* [r155] data/Pastes.rda, data/Penicillin.rda, man/Dyestuff.Rd,
	  man/Pastes.Rd, man/Penicillin.Rd: Added Dyestuff2, Pastes and
	  Penicillin data sets. Updated documentation

2008-06-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* [r153] R/lmer.R: more cleanup in 'method' back compatibility ; typo in
	  message
	* [r152] R/lmer.R: method: s/Laplacian/Laplace/ for back compatibility

2008-06-19  Douglas Bates <bates@stat.wisc.edu>

	* [r151] src/Syms.h, src/init.c, src/lmer.c: Insert hooks for AGQ code
	* [r150] tests/lmer.Rout.save, tests/nlmer.Rout.save: Add saved test
	  output files for comparisons
	* [r149] tests/lmer.R: Replace method argument by REML
	* [r148] R/AllClass.R, R/lmer.R, man/cake.Rd, man/lmer.Rd: Replace
	  method argument by REML or nAGQ, as appropriate
	* [r147] DESCRIPTION: Add Martin and Bin as authors; new version

2008-06-18  Bin Dai <dai@stat.wisc.edu>

	* [r146] R/AllClass.R, R/lmer.R, src/lmer.c: Get ready for AGQ

2008-06-16  Bin Dai <dai@stat.wisc.edu>

	* [r145] R/lmer.R, src/lmer.c: Basic methods lines added
	* [r144] R/AllClass.R, src/Syms.h, src/init.c, src/lmer.c: test of svn

2008-06-01  Douglas Bates <bates@stat.wisc.edu>
