@@ -1,3 +1,9 @@
+2008-06-22  Douglas Bates <bates@stat.wisc.edu>
+
+	* [r166] DESCRIPTION: New release
+	* [r165] R/lmer.R, man/mer-class.Rd: Added sparse expand method for mer
+	  and an example of its use
+
 2008-06-21  Douglas Bates <bates@stat.wisc.edu>
 
 	* [r161] NAMESPACE, R/lmer.R, man/fixef.Rd, man/hatTrace.Rd,
